--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -1,57 +1,74 @@
 {% extends "base.html" %}
 
-{% block title %} Sites Gallery — {{ block.super }} {% endblock %}
+{% block title %} GeoNode Gallery — {{ block.super }} {% endblock %}
 
-{% block body_class %}geonode-features{% endblock %}
+{% block body_class %}geonode-gallery{% endblock %}
 
 {% block content %}
-        <section class="feature-detail">
+
+{% block content %}
+
+        <section class="banner">
             <div class="container">
                 <div class="row">
-                    <div class="span7">
-                        <h1>Sites Gallery</h1>
-                        <article class="article1">
-                            <h5></h5>
-<h5>Gallery</h5>
-<p>A live demo of the latest stable build is available at demo.geonode.org. Anyone may sign up for a user account, upload and style data, create and share maps, and change permissions.  Since it is a demo site, we don’t make any guarantee that your data and maps will always be there.  But it should hopefully allow you to easily preview the capabilities of GeoNode.</p>
-
-<h5>Real-world Examples</h5>
-<p>If you have an example you’d like to see added to the website please email the developer mailing list.</p>
-
-<h5>North America</h5>
-
-<p>MetroBoston Data Common - The MetroBoston DataCommon provides a wealth of information about the region’s people and communities through a variety of topics — from arts and education to the environment and transportation. A resource for all those seeking to understand how the region is changing, it helps residents, stakeholders, planners, city and town officials, educators and journalists explore data and make informed decisions.</p>
-
-<p>Open San Diego - The mission of Open San Diego is to make data about San Diego freely available for everyone to use.</p>
-
-<p>UC Davis Information Center for the Environment - ICE is an environmental information brokerage and research laboratory in the Department of Environmental Science & Policy at the University of California, Davis.</p>
-
-<h5>Europe</h5>
-
-<p>montagneAperte was created to simplify accessing data, geographic and cartographic data, to facilitate the communication of spatial information and its dissemination, and to promote better environmental planning.</p>
-
-<h5>Latin America & Caribbean</h5>
-
-<p>Grenada Interagency Land Information Network System - GILINS was created to share spatial land information among the principal government departments involved in land management in Grenada.</p>
-
-<p>HaitiData.org - The purpose of HaitiData.org is to facilitate open access to Haiti-related geo-spatial information, data and knowledge sources, encouraging others to share and use them for the development of Haiti.</p>
-
-<p>SLING: Saint Lucia GeoNode - A national spatial data infrastructure for the government of Saint Lucia.</p>
-
-<p>Saint Vincent GeoNode - A national spatial data infrastructure for the government of Saint Vincent.</p>
-
-<h5>Africa</h5>
-
-<p>Open Data for the Horn - Open Data for the Horn facilitates open access to geospatial information, data and knowledge sources, about the ongoing response to the drought in the Horn of Africa. Open Data for the Horn is a project of the Open Data for Resilience Initiative.</p>
-
-<p>Virtual Kenya - The ultimate goal of Virtual Kenya is to promote increased data sharing and spatial analysis for better decision-making, development planning and education in Kenya, while at the same time demonstrating the potential and use of web-based spatial planning tools.</p>
-                        </article>
-
-                        <div class="box2">
-                            <h4><a href="#">Learn More About</a></h4>
+                    <div class="span6">
+                        <h1>
+                            <strong>Hello</strong>,<br />
+                            <span>Welcome to the <strong>GeoNode</strong> Gallery.</span>
+                        </h1>
+                    
+                    </div>
+                    <div class="span6">
+                        <img src="static/img/features_hero_img.png" width="489" height="216" alt="" class="pull-right hero-img" />
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="body">
+            <div class="container">
+                <div class="row">
+                    <div class="span10">
+                        <nav class="subnav">
+                            <h5>Regions:</h5>
+                            <ul class="unstyled">
+                                <li><a href="#africa"><strong>Africa</strong></a></li>
+                                <li><a href="#americas"><strong>Americas</strong></a></li>
+                                <li><a href="#asiapacific"><strong>Asia Pacific</strong></a></li>
+                                <li><a href="#europe"><strong>Europe</strong></a></li>
+                                <li><a href="#worldwide"><strong>World Wide</strong></a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="feature-details" id="worldwide">
+            <div class="container">
+                <div class="row">
+                    <div class="span5">
+                        <img src="static/img/iphone_explore_maps.png" width="309" height="700" alt="Explore Maps" class="feature-img" />
+                    </div>
+                    <div class="span7 number one">
+                        <div class="highlighted-box">
+                            <h2>CoSA Web Application</h2>
+                            <h4>Created by Ithaca</h4>
+                            <div>
+                                <p>
+                                Ithaca is using GeoNode as a demonstrator of an on line geographic platform with data obtained through 
+                                remote sensing techniques and reference data to support the Post Disaster Need 
+                                Assessment
+                                Find it online at: <a href "http://geonode.ithacaweb.org">http://geonode.ithacaweb.org</a>
+				</p>
+	                   </div>		                            
+ <a href="explore_discover.html" class="hide btn btn-success">Learn about GeoNode's Discovery Features</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        {% comment %}
+   
+            </div>
+        </section>
+{% endcomment %}
 {% endblock content %}
