--- a/admin_features.html
+++ b/admin_features.html
@@ -91,12 +91,16 @@
                             <h2>OGC Compliant SDI</strong></h2>
                             <h4>Essential components for deploying OGC SDI</h4>
                             <div>
-                                <p>GeoNode includes everything an administrator needs to deplot an OGC compliant SDI.
+                                <p>GeoNode includes the essential building blocks than an agency needs to deploy an OGC compliant SDI. Having GeoServer as a foundation enables you to publish data from a wide variety of spatial data sources using Open Standards from the OGC. GeoServer is the reference implementation of WFS and WCS and is a certified compliant WMS. GeoNode's Metadata system also enables you to publish metadata in OGC compliant formats. 
                                 </br>Features include:
                                 </p>
                             <ul class="unstyled">
-                                <li>WMS/WFS/WCS/WMC</li>
-                                <li>CSW</li>
+                                <li>Web Map Service (WMS)</li>
+                                <li>Web Feature Service (WFS)</li>
+                                <li>Web Coverage Service (WCS)</li>
+                                <li>Catalogue Services for Web (CSW)</li>
+                                <li>Web Map Context (WMC)</li>
+                                <li>Tile Map Service (TMS)</li>
                             </ul>
                             <a href="ogc_sdi.html" class="hide btn btn-success">Learn about GeoNode for SDI</a>
                         </div>
@@ -144,10 +148,13 @@
                             <h2>Security</strong></h2>
                             <h4>Security Framework</h4>
                             <div>
-                                <p>GeoNode is built upon widley used web based tools, like Django.
+                                <p>GeoNode provides a robust framework for ensuring that it is is both easy to share your data with other users and groups as well as ensuring that data that is meant to be secure and private is only accessible to authorized users. GeoNode builds on Django's authentication framework and integrates with GeoServer's security subsystem. Permissions can be applied to layers and maps and can be used to assign read, write and edit permissions to them. Additionally, GeoNode's integration with GeoServers security system ensures that the Web Services provied from your GeoNode honor the security setup you and your users have defined. The GeoNode development team is also working to make it easy to use external services for authentication such as oAuth and LDAP as well as against social platforms like Facebook and Twto make. 
                                 </p>
                             <ul class="unstyled">
-                                <li>Permissions</li>
+                                <li>Generic Permissions</li>
+                                <li>Layer and Map object Permissions</li>
+                                <li>Integration with GeoServer security at the service level</li>
+                                <li>Integration with external authentication services</li>
                             </ul>
                             <a href="security.html" class="hide btn btn-success">Learn about GeoNode's Security Framework</a>
                         </div>
@@ -164,7 +171,7 @@
                             <h2>Scalability</strong></h2>
                             <h4>Scalability, reliability</h4>
                             <div>
-                                <p>
+                                <p>Since GeoNode's web components are based on django, the path to scalabilty is well travelled as Django is used on some of the highest traffic sites in the world. Caching can be implemented at several levels including at the page and layer level. Additionally GeoNode leverages GeoWebCache to either dynamically or statically cache web map tiles locally or to a CDN which dramatically improves performance for your users and makes it easy to run high traffic geonode sites with minimal demands on your infrastructure. The GeoNode development team is also constantly working to make it easier and easier to deploy GeoNode to cloud based services such as Amazon Web Services (AWS) or OpenShift and making scalability on those platforms automatic and frictionless. 
                                 </p>
                             <ul class="unstyled">
                             </ul>
@@ -189,7 +196,7 @@
                             <h2>Administration Console</strong></h2>
                             <h4>Django Administrator Console</h4>
                             <div>
-                                <p>
+                                <p>GeoNode provides a customized version of the default Django Management or Adminsitration console which provides an easy to use interface for looking at the entire set of modules and data that make up a GeoNode and to perform bulk operations against those. The Admin console can also be used to do basic usage monitoring and to monitor user provided content for acceptability and xxx per your sites specific use case. 
                                 </p>
                             <ul class="unstyled">
                                 <li>Metadata Editing</li>
