--- a/pages/admin_features.html
+++ b/pages/admin_features.html
@@ -82,8 +82,8 @@
                             <h2>Metadata</strong></h2>
                             <h4>Metadata: Catalogue, Authoring and Management</h4>
                             <div>
-                                <p>Metadata is a key component of any SDI and GeoNode offers administrators tools to handle it easily. GeoNode is truly a complete metadata catalog solution. Upon upload, ISO compliant metadata records are created for every data set. Even further, defauly metadata is scraped from each individuals profile. Records are then editable through the web and accessible via search or the CSW open catolog standard.</br>
-                                Feautures Include:
+                                <p>Metadata is a key component of any SDI, and a key component of GeoNode's data and map publishing workflow. GeoNode provides a complete metadata catalogue solution.  Users and adminstrators can use GeoNode's metadata editor or upload an existing geospatial metadata XML document. Even further, default metadata is scraped from each individuals profile. Records are then editable through the web and accessible via search or a variety of standards-based catalogue interface standards via pycsw (OGC CSW, SRU, OpenSearch). Users can also access dataset and map metadata in a variety of standard formats (ISO, FGDC, NASA DIF, Dublin Core).</br>
+                                Features Include:
                                 </p>
                             <ul class="unstyled">
                                 <li>CSW</li>
