--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -12,7 +12,7 @@
                     <div class="span6">
                         <h1>
                             <strong>Hello</strong>,<br />
-                            <span>Welcome to the <strong>GeoNode</strong> Gallery.</span>
+                            <span>Welcome to the <strong>GeoNode</strong> Gallery</span>
                         </h1>
                     
                     </div>
@@ -46,27 +46,48 @@
                     <div class="span5">
                         <img src="static/img/iphone_explore_maps.png" width="309" height="700" alt="Explore Maps" class="feature-img" />
                     </div>
-                    <div class="span7 number one">
+                   	 <div class="span7 number one">
+                       	      <div class="highlighted-box">
+                          	  <h2>CoSA Web Application</h2>
+                         	   <h4>Created by Ithaca</h4>
+                           	 <div>
+                                      <p>
+                                	Ithaca is using GeoNode as a demonstrator of an on line geographic platform with data obtained through 
+                                	remote sensing techniques and reference data to support the Post Disaster Need 
+                                	Assessment
+                                	Find it online at: <a href "http://geonode.ithacaweb.org">http://geonode.ithacaweb.org</a>
+				      </p>
+	                  	 </div>		                            
+ 				<a href="explore_discover.html" class="hide btn btn-success">Learn about GeoNode's Discovery Features</a>
+                              </div>
+                   	 </div>
+                    </div>
+               </div>
+        </section>  
+  	<section class="feature-details" id="worldwide">
+            <div class="container">
+                <div class="row">
+                    <div class="span5">
+                        <img src="static/img/iphone_explore_maps.png" width="309" height="700" alt="Explore Maps" class="feature-img" />
+                    </div>
+                    <div class="span7 number two">
                         <div class="highlighted-box">
-                            <h2>CoSA Web Application</h2>
-                            <h4>Created by Ithaca</h4>
+                            <h2>MASDAP</h2>
+                            <h4>Created by GFDRR and the World Bank</h4>
                             <div>
                                 <p>
-                                Ithaca is using GeoNode as a demonstrator of an on line geographic platform with data obtained through 
-                                remote sensing techniques and reference data to support the Post Disaster Need 
-                                Assessment
-                                Find it online at: <a href "http://geonode.ithacaweb.org">http://geonode.ithacaweb.org</a>
+                                The Government of Malawi, in partnership with the GFDRR labs of the World Bank is using GeoNode 
+                                with data coming from the various ministries to build resilience to disasters in a 
+                                changing climate.
+                                Find it online at: <a href "http://23.22.63.123">MASDAP</a>
 				</p>
 	                   </div>		                            
- <a href="explore_discover.html" class="hide btn btn-success">Learn about GeoNode's Discovery Features</a>
+ 			 	 <a href="explore_discover.html" class="hide btn btn-success">Learn about GeoNode's Discovery Features</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         {% comment %}
-   
-            </div>
-        </section>
 {% endcomment %}
 {% endblock content %}
