--- a/admin_features.html
+++ b/admin_features.html
@@ -91,14 +91,14 @@
                             <h2>OGC Compliant SDI</strong></h2>
                             <h4>Essential components for deploying OGC SDI</h4>
                             <div>
-                                <p>GeoNode includes the essential building blocks than an agency needs to deploy an OGC compliant SDI. Having GeoServer as a foundation enables you to publish data from a wide variety of spatial data sources using Open Standards from the OGC. GeoServer is the reference implementation of WFS and WCS and is a certified compliant WMS. GeoNode's Metadata system also enables you to publish metadata in OGC compliant formats. 
+                                <p>GeoNode includes the essential building blocks than an agency needs to deploy an OGC compliant SDI. Having GeoServer as a foundation enables you to publish data from a wide variety of spatial data sources using Open Standards from the OGC and ISO. GeoServer is the reference implementation of WFS and WCS and is a certified compliant WMS. GeoNode's Metadata and Cataloguing system also enables you to publish metadata in a variety of geospatial metadata standards (ISO, FGDC, NASA DIF, Dublin Core). pycsw is certified OGC compliant and a CSW reference implementation, providing a standards-based metadata and catalogue component of SDI.
                                 </br>Features include:
                                 </p>
                             <ul class="unstyled">
                                 <li>Web Map Service (WMS)</li>
                                 <li>Web Feature Service (WFS)</li>
                                 <li>Web Coverage Service (WCS)</li>
-                                <li>Catalogue Services for Web (CSW)</li>
+                                <li>Catalogue Service for Web (CSW)</li>
                                 <li>Web Map Context (WMC)</li>
                                 <li>Tile Map Service (TMS)</li>
                             </ul>
