--- a/pages/admin_features.html
+++ b/pages/admin_features.html
@@ -56,7 +56,7 @@
                             <h2>OGC Compliant SDI</strong></h2>
                             <h4>Essential components for deploying OGC SDI</h4>
                             <div>
-                                <p>GeoNode includes the essential building blocks than an agency needs to deploy an OGC compliant SDI. Having GeoServer as a foundation enables you to publish data from a wide variety of spatial data sources using Open Standards from the OGC and ISO. GeoServer is the reference implementation of WFS and WCS and is a certified compliant WMS. GeoNode's Metadata and Cataloguing system also enables you to publish metadata in a variety of geospatial metadata standards (ISO, FGDC, NASA DIF, Dublin Core). pycsw is certified OGC compliant and a CSW reference implementation, providing a standards-based metadata and catalogue component of SDI.
+                                <p>GeoNode includes the essential building blocks than an agency needs to deploy an OGC compliant SDI. Having GeoServer as a foundation enables you to publish data from a wide variety of spatial data sources using Open Standards from the OGC and ISO. GeoServer is the reference implementation of WFS and WCS and is a certified compliant WMS. GeoNode's </p><p>Metadata and Cataloguing system also enables you to publish metadata in a variety of geospatial metadata standards (ISO, FGDC, NASA DIF, Dublin Core). pycsw is certified OGC compliant and a CSW reference implementation, providing a standards-based metadata and catalogue component of SDI.
                                 </br>Features include:
                                 </p>
                             <ul class="unstyled">
