--- a/admin_features.html
+++ b/admin_features.html
@@ -91,7 +91,7 @@
                             <h2>OGC Compliant SDI</strong></h2>
                             <h4>Essential components for deploying OGC SDI</h4>
                             <div>
-                                <p>GeoNode includes the essential building blocks than an agency needs to deploy an OGC compliant SDI. Having GeoServer as a foundation enables you to publish data from a wide variety of spatial data sources using Open Standards from the OGC and ISO. GeoServer is the reference implementation of WFS and WCS and is a certified compliant WMS. GeoNode's Metadata and Cataloguing system also enables you to publish metadata in a variety of geospatial metadata standards (ISO, FGDC, NASA DIF, Dublin Core). pycsw is certified OGC compliant and a CSW reference implementation, providing a standards-based metadata and catalogue component of SDI.
+                                <p>GeoNode includes the essential building blocks than an agency needs to deploy an OGC compliant SDI. Having GeoServer as a foundation enables you to publish data from a wide variety of spatial data sources using Open Standards from the OGC and ISO. GeoServer is the reference implementation of WFS and WCS and is a certified compliant WMS. GeoNode's </p><p>Metadata and Cataloguing system also enables you to publish metadata in a variety of geospatial metadata standards (ISO, FGDC, NASA DIF, Dublin Core). pycsw is certified OGC compliant and a CSW reference implementation, providing a standards-based metadata and catalogue component of SDI.
                                 </br>Features include:
                                 </p>
                             <ul class="unstyled">
@@ -117,8 +117,8 @@
                             <h2>Metadata</strong></h2>
                             <h4>Metadata: Catalogue, Authoring and Management</h4>
                             <div>
-                                <p>Metadata is a key component of any SDI and GeoNode offers administrators tools to handle it easily. GeoNode is truly a complete metadata catalog solution. Upon upload, ISO compliant metadata records are created for every data set. Even further, defauly metadata is scraped from each individuals profile. Records are then editable through the web and accessible via search or the CSW open catolog standard.</br>
-                                Feautures Include:
+                                <p>Metadata is a key component of any SDI, and a key component of GeoNode's data and map publishing workflow. GeoNode provides a complete metadata catalogue solution.  Users and adminstrators can use GeoNode's metadata editor or upload an existing geospatial metadata XML document. Even further, default metadata is scraped from each individuals profile. Records are then editable through the web and accessible via search or a variety of standards-based catalogue interface standards via pycsw (OGC CSW, SRU, OpenSearch). Users can also access dataset and map metadata in a variety of standard formats (ISO, FGDC, NASA DIF, Dublin Core).</br>
+                                Features Include:
                                 </p>
                             <ul class="unstyled">
                                 <li>CSW</li>
