--- a/pages/admin_features.html
+++ b/pages/admin_features.html
@@ -159,7 +159,7 @@
                             <h2>Administration Console</strong></h2>
                             <h4>Django Administrator Console</h4>
                             <div>
-                                <p>GeoNode provides a customized version of the default Django Management or Adminsitration console which provides an easy to use interface for looking at the entire set of modules and data that make up a GeoNode and to perform bulk operations against those. The Admin console can also be used to do basic usage monitoring and to monitor user provided content for acceptability and xxx per your sites specific use case. 
+                                <p>GeoNode provides a customized version of the default Django Adminsitration and Management console which provides an easy to use interface for looking at the entire set of modules and data that make up a GeoNode and to perform bulk operations against those. The Admin console can also be used to do basic usage monitoring and to monitor user provided content for acceptability and xxx per your sites specific use case. 
                                 </p>
                             <ul class="unstyled">
                                 <li>Metadata Editing</li>
