--- a/admin_features.html
+++ b/admin_features.html
@@ -149,7 +149,7 @@
                                 <p>GeoNode provides a robust framework for ensuring that it is is both easy to share your data with the public, with other users and groups as well as ensuring that data that is meant to be secure and private is only accessible by authorized users. GeoNode builds on Django's authentication framework and integrates with GeoServer's security subsystem. Permissions can be applied to layers and maps and can be used to assign read, write and edit permissions to them. </p><p>Additionally, GeoNode's integration with GeoServers security system ensures that the Web Services provied from your GeoNode honor the security setup you and your users have defined. <p></p>The GeoNode development team is also working to make it easy to use external services for authentication such as oAuth and LDAP as well as against social platforms like Facebook, Twitter and Google+. 
                                 </p>
                             <ul class="unstyled">
-                                <li>Generic Permissions</li>
+                                <li>Generic Permissions (Anonymous or Authenticated)</li>
                                 <li>Layer and Map object Permissions</li>
                                 <li>Integration with GeoServer security at the service level</li>
                                 <li>Integration with external authentication services</li>
