--- a/dev_features.html
+++ b/dev_features.html
@@ -87,7 +87,7 @@
                             <h2>Open Source Geospatial</strong></h2>
                             <h4>Open from top to bottom</h4>
 							<div>
-							<p>GeoNode is built upon a platform of proven open source components including GeoServer, GeoNetwork, Django, and GeoExt,  GeoNode implements many Open Geospatial Consortium (OGC) standards, including WMS, WFS, WCS, KML, and CSW. GeoNode development always is always contributed to the underlying open source projects and software libraries.
+							<p>GeoNode is built upon a platform of proven open source components including Django, GeoServer, pycsw, OpenLayers and GeoExt. GeoNode implements many Open Geospatial Consortium (OGC) standards, including WMS, WFS, WCS, KML, and CSW. GeoNode development also contributes to the underlying open source projects and software libraries.
 							</br>Components include: 
 							</p>
 							</div>
