--- a/pages/dev_features.html
+++ b/pages/dev_features.html
@@ -79,10 +79,11 @@
                             <h4>Built for the web</h4>
                             <ul class="unstyled">
 							<div>
-								<p>GeoNode leverages the Django web Framework, creating a friendly environment for web developers accustomed to using a real web framework. As opposed to other geospatial tools, which force developers to adapt to a "GIS" environment, GeoNode and Django offer a place where developers can build sites using tools they are comfortable and familiar with.</p>
+								<p>GeoNode leverages the Django web Framework, creating a friendly environment for web developers accustomed to using a modern MVC web framework. In contrast with many geospatial tools which force web developers to adapt to a "GIS" stack, GeoNode and Django offer a framework on which developers can build Geospatial web applications using tools they are already comfortable and familiar with.</p>
 								<p>
-								Django brings its large user base and ecosystem of apps, making it easier than ever to develop modern, social websites.
-								</br>Features Include: 	
+								Django brings its large user base and ecosystem of apps, making it easy to develop modern, social websites.</p>
+                                <p>
+								Features Include: 	
 								</p>
 							</div>
                                 <li>Modern, high productivity web framework</li>
