--- a/pages/dev_features.html
+++ b/pages/dev_features.html
@@ -79,7 +79,7 @@
                             <h4>Built for the web</h4>
                             <ul class="unstyled">
 							<div>
-								<p>GeoNode leverages the Django web Framework, creating a friendly environment for web developers accustomed to using a modern MVC web framework. In contrast with many geospatial tools which force web developers to adapt to a "GIS" stack, GeoNode and Django offer a framework on which developers can build Geospatial web applications using tools they are already comfortable and familiar with.</p>
+								<p>GeoNode leverages the Django web Framework, offering a friendly and extensible environment for web developers accustomed to using any modern MVC web framework. In contrast with many geospatial tools which force web developers to adapt to a "GIS" specific stack, GeoNode and Django offer a framework on which developers can build Geospatial web applications using tools they are already comfortable and familiar with.</p>
 								<p>
 								Django brings its large user base and ecosystem of apps, making it easy to develop modern, social websites.</p>
                                 <p>
