--- a/pages/dev_features.html
+++ b/pages/dev_features.html
@@ -112,7 +112,7 @@
                         <div class="highlighted-box">
                             <h2>Bootstrap and jQuery</strong></h2>
                             <h4>Modern and flexible web front-end</h4>
-                            <p>GeoNode's front end is based on the popular and flexible jQuery and Bootstrap frameworks. A set of jQuery javascript plugins is used to drive the interactive and responsive user interface, and Bootstrap css is used to style the pages. Both of these frameworks make it easy theme and customize your own GeoNode implementation and since both are widely used in other projects, integration is often easy.
+                            <p>GeoNode's front end is based on the popular and flexible jQuery and Bootstrap frameworks. A set of jQuery javascript plugins is used to drive the interactive and responsive user interface, and Bootstrap css is used to style the pages. Both of these frameworks make it easy theme and customize your own GeoNode implementation and since both are widely used in other projects, integration is frictionless.
 						<div>
 							<p>
 							</br>Features include: 	
