--- a/pages/dev_features.html
+++ b/pages/dev_features.html
@@ -168,8 +168,7 @@
                             <h2>Interoperability</strong></h2>
                             <h4>GeoNode plays well with others</h4>
 						<div>
-							<p>GeoNode is not only a geospatial platform, it's a social one. Easily interoperate across other GeoNodes and many other popular social 				
-								services. 
+							<p>GeoNode is not only a geospatial platform, it's a social one. GeoNode's foundational components make it easy to interoperate with other GeoNodes and OGC Services as well as with many other popular social services and tools. 
 							</br>	
 							</p>
 						</div>
