--- a/pages/user_features.html
+++ b/pages/user_features.html
@@ -51,9 +51,9 @@
                             <h2>Spatial Data Discovery</h2>
                             <h4>Browse and search for geospatial data</h4>
                             <div>
-                                <p>By enabling the kind of collaboration that has previously been limited to social networks and specialized geospatial tools GeoNode makes it easy to find geospatial data.</p>
-							    <p>With extensive user controls datasets can be shared publicly or restricted to allow access to only specific users.
-							    </br>Features include:
+                                <p>By enabling the kind of collaboration that has previously been limited to social networks and combining it with specialized geospatial tools, GeoNode makes it easy to explore, discover, process, style, combine and share geospatial data.</p>
+							    <p>By providing a non-technical user focused experience, spatial datasets can be easily imported and shared publicly or restricted to allow access to only specific users or groups.</p><p>
+							    Features include:
 							    </p>
 							</div>
 
