--- a/user_features.html
+++ b/user_features.html
@@ -86,7 +86,7 @@
                             <h2>Spatial Data Discovery</h2>
                             <h4>Browse and search for geospatial data</h4>
                             <div>
-                                <p>By enabling the kind of collaboration that has previously been limited to social networks and combining it with specialized geospatial tools, GeoNode makes it easy to explore, discover, process, style, combine and share geospatial data.</p>
+                                <p>By enabling the kind of collaboration that has previously been limited to social networks and combining it with specialized geospatial tools, GeoNode makes it easy to explore, discover, process, style, combine and share geospatial data and maps.</p>
 							    <p>By providing a non-technical user focused experience, spatial datasets can be easily imported and shared publicly or restricted to allow access to only specific users or groups.</p><p>
 							    Features include:
 							    </p>
