--- a/pages/user_features.html
+++ b/pages/user_features.html
@@ -77,7 +77,7 @@
                             <h4>Upload and securely share geospatial data</h4>
                           <div>
 					                            	 <p>
-					                            	 GeoNode makes it easy to upload and manage data through the web. Any user can upload data and make it available through OGC standards. Data is available for browsing, searching and styling.</p>
+					                            	 GeoNode makes it easy to upload and manage spatial data layers on the web. Any user can upload data layers and make them available via OGC services. Data Layers are available for browsing, searching, styling, processing and combining to make maps that can be shared with specific users or publicly.</p>
 					                            	 <p>Supported formats include Shapefiles, GeoTiffs, KML and CSV. More formats will be supported soon!</br>
 					                            	 Features include:
 					                            	</p>
