--- a/pages/user_features.html
+++ b/pages/user_features.html
@@ -78,7 +78,7 @@
                           <div>
 					                            	 <p>
 					                            	 GeoNode makes it easy to upload and manage spatial data layers on the web. Any user can upload data layers and make them available via OGC services. Data Layers are available for browsing, searching, styling, processing and combining to make maps that can be shared with specific users or publicly.</p>
-					                            	 <p>Supported formats include Shapefiles, GeoTiffs, KML and CSV. More formats will be supported soon!</br>
+					                            	 <p>Supported upload formats include Shapefiles, GeoTiffs, KML and CSV. Your GeoNode administrator can also help you connect to existing spatial databases, services and specialized raster and vector formats</br>
 					                            	 Features include:
 					                            	</p>
 					                            </div>
