--- a/pages/user_features.html
+++ b/pages/user_features.html
@@ -78,8 +78,8 @@
                           <div>
 					                            	 <p>
 					                            	 GeoNode makes it easy to upload and manage spatial data layers on the web. Any user can upload data layers and make them available via OGC services. Data Layers are available for browsing, searching, styling, processing and combining to make maps that can be shared with specific users or publicly.</p>
-					                            	 <p>Supported upload formats include Shapefiles, GeoTiffs, KML and CSV. Your GeoNode administrator can also help you connect to existing spatial databases, services and specialized raster and vector formats</br>
-					                            	 Features include:
+					                            	 <p>Supported upload formats include Shapefiles, GeoTiffs, KML and CSV. Your GeoNode administrator can also help you connect to existing spatial databases, services and specialized raster and vector formats.
+					                            	 </p><p>Features include:
 					                            	</p>
 					                            </div>
 
@@ -112,8 +112,8 @@
                          
 								<div>
 									<p>GeoNode comes with helpful cartography tools for styling and composing maps through the web. These tools make it easy for anyone to assemble a browser based mapping application with functionality traditionally found in the desktop GIS world.</p>
-									<p>Users can add and style, style and publish layers with ease. By leveraging GeoExplorer users gain enhanced interactivity with GIS specific tools like identify, query, measure, create feature, and more.</br>
-									Features include:
+									<p>Users can add and style, style and publish layers with ease. By leveraging GeoExplorer users gain enhanced interactivity with GIS specific tools like identify, query, measure, create feature, and more.
+									<p></p>Features include:
 									</p>
 								</div>
 	   <ul class="unstyled">
