--- a/user_features.html
+++ b/user_features.html
@@ -129,7 +129,8 @@
                         </div>
                     </div>
                     <div class="span5">
-                        <img src="static/img/globe.png" width="347" height="469" alt="Globe" class="feature-img" />
+                        <!--img src="static/img/globe.png" width="347" height="469" alt="Globe" class="feature-img" /-->
+                        <iframe src="http://www.screenr.com/embed/0fn7" width="650" height="396" frameborder="0"></iframe>
                     </div>
                 </div>
             </div>
