--- a/pages/user_features.html
+++ b/pages/user_features.html
@@ -44,7 +44,8 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/iphone_explore_maps.png" width="309" height="700" alt="Explore Maps" class="feature-img" />
+                        <!--img src="static/img/iphone_explore_maps.png" width="309" height="700" alt="Explore Maps" class="feature-img" /-->
+                        <iframe src="http://www.screenr.com/embed/Wfn7" width="650" height="396" frameborder="0"></iframe>
                     </div>
                     <div class="span7 number one">
                         <div class="highlighted-box">
