--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %} GeoNode Gallery — {{ block.super }} {% endblock %}
+{% block title %} Admin Features — {{ block.super }} {% endblock %}
 
-{% block body_class %}geonode-gallery{% endblock %}
+{% block body_class %}geonode-features{% endblock %}
 
 {% block content %}
-
         <section class="banner">
             <div class="container">
                 <div class="row">
