--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Admin Features — {{ block.super }} {% endblock %}
+{% block title %} Gallery — {{ block.super }} {% endblock %}
 
 {% block body_class %}geonode-features{% endblock %}
 
@@ -26,7 +26,7 @@
                 <div class="row">
                     <div class="span10">
                         <nav class="subnav">
-                            <h5>Regions:</h5>
+                            <h5>Entries by Region:</h5>
                             <ul class="unstyled">
                                 <li><a href="#africa"><strong>Africa</strong></a></li>
                                 <li><a href="#americas"><strong>Americas</strong></a></li>
@@ -43,7 +43,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/iphone_explore_maps.png" width="309" height="700" alt="Explore Maps" class="feature-img" />
+                        <a href="http://geonode.ithacaweb.org"<img src="static/img/cosa.png" width="325" height="189" alt="" class="feature-img" /></a>
                     </div>
                    	 <div class="span7 number one">
                        	      <div class="highlighted-box">
@@ -51,10 +51,9 @@
                          	   <h4>Created by Ithaca</h4>
                            	 <div>
                                       <p>
-                                	Ithaca is using GeoNode as a demonstrator of an on line geographic platform with data obtained through 
-                                	remote sensing techniques and reference data to support the Post Disaster Need 
-                                	Assessment
-                                	Find it online at: <a href "http://geonode.ithacaweb.org">http://geonode.ithacaweb.org</a>
+                                	Ithaca is using GeoNode as a demonstration of an on line geographic platform with data obtained through 
+                                	remote sensing techniques along with reference data to support the Post Disaster Needs Assessments</br>
+                                	Find it online: <a href= "http://geonode.ithacaweb.org">http://geonode.ithacaweb.org</a>
 				      </p>
 	                  	 </div>		                            
  				<a href="explore_discover.html" class="hide btn btn-success">Learn about GeoNode's Discovery Features</a>
