--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -43,7 +43,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <a href="http://geonode.ithacaweb.org"<img src="static/img/cosa.png" width="325" height="189" alt="" class="feature-img" /></a>
+                        <a href="http://geonode.ithacaweb.org"><img src="static/img/cosa.png" width="325" height="189" alt="cosa" class="feature-img" /></a>
                     </div>
                    	 <div class="span7 number one">
                        	      <div class="highlighted-box">
@@ -62,11 +62,11 @@
                     </div>
                </div>
         </section>  
-  	<section class="feature-details" id="worldwide">
+  	<section class="feature-details feature2" id="worldwide">
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <img src="static/img/iphone_explore_maps.png" width="309" height="700" alt="Explore Maps" class="feature-img" />
+                        <a href= "http://23.22.63.123"><img src="static/img/iphone_explore_maps.png" width="325" height="189" alt="MASDAP" class="feature-img" />
                     </div>
                     <div class="span7 number two">
                         <div class="highlighted-box">
@@ -77,7 +77,7 @@
                                 The Government of Malawi, in partnership with the GFDRR labs of the World Bank is using GeoNode 
                                 with data coming from the various ministries to build resilience to disasters in a 
                                 changing climate.
-                                Find it online at: <a href "http://23.22.63.123">MASDAP</a>
+                                Find it online: <a href= "http://23.22.63.123">MASDAP</a>
 				</p>
 	                   </div>		                            
  			 	 <a href="explore_discover.html" class="hide btn btn-success">Learn about GeoNode's Discovery Features</a>
