cleaning up gllaery entries

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -53,7 +53,7 @@
                                       <p>
                                 	Ithaca is using GeoNode as a demonstration of an on line geographic platform with data obtained through 
                                 	remote sensing techniques along with reference data to support the Post Disaster Needs Assessments</br>
-                                	Find it online: <a href= "http://geonode.ithacaweb.org">http://geonode.ithacaweb.org</a>
+                                	Find it online: <a href= "http://geonode.ithacaweb.org">CoSA</a>
 				      </p>
 	                  	 </div>		                            
  				<a href="explore_discover.html" class="hide btn btn-success">Learn about GeoNode's Discovery Features</a>
@@ -66,7 +66,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span5">
-                        <a href= "http://23.22.63.123"><img src="static/img/iphone_explore_maps.png" width="325" height="189" alt="MASDAP" class="feature-img" />
+                        <a href= "http://23.22.63.123"><img src="static/img/masdap.png" width="325" height="189" alt="MASDAP" class="feature-img" /></a>
                     </div>
                     <div class="span7 number two">
                         <div class="highlighted-box">
