new gallery entries

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -86,6 +86,47 @@
                 </div>
             </div>
         </section>
+        <section class="feature-details feature3" id="worldwide">
+            <div class="container">
+                <div class="row">
+                    <div class="span5">
+                        <a href= "http://geonode.wfp.org"><img src="static/img/wfp.png" width="325" height="189" alt="Iphone Geonode" class="feature-img" /></a>
+                    </div>
+                         <div class="span7 number three">
+                             <div class="highlighted-box">
+                                <h2>WFP</strong></h2>
+                                <h4>The UN World Food Programme</h4>
+                                    <div>
+                                        <p>The United Nations World Food Programme is using GeoNode enhance their data collecting capabilities from anywhere in the world. By leveraging features like on line editing features 
+                                        and crowdsouring data they are be better prepared to react during humanitarian emergencies. 
+                                        Find it online: <a href= "http://geonode.wfp.org">WFP</a>
+                                        </p>
+                                    </div>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </section>
+        <section class="feature-details feature3" id="worldwide">
+            <div class="container">
+                <div class="row">
+                    <div class="span5">
+                        <a href= "http://www.montagneaperte.it"><img src="static/img/montagneAperte.png" width="325" height="189" alt="Iphone Geonode" class="feature-img" /></a>
+                    </div>
+                         <div class="span7 number two">
+                             <div class="highlighted-box">
+                                <h2>montagneAperte 2.0</strong></h2>
+                                <h4>GfosServices</h4>
+                                    <div>
+                                        <p>The Mountain community of Monti Martani, Seranoand Subasio is using Geonode to share  spatial data such like hiking trails and other distrincitve outdoor feautures.
+                                        Find it online: <a href= "http://www.montagneaperte.it">montagneAperte</a>
+                                        </p>
+                                    </div>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </section>
         {% comment %}
 {% endcomment %}
 {% endblock content %}
