--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -112,7 +112,7 @@
                 <div class="row">
                          <div class="span7 number four">
                              <div class="highlighted-box">
-                                <h2>montagneAperte 2.0</strong></h2>
+                                <h2>montagneAperte</strong></h2>
                                 <h4>GfosServices</h4>
                                     <div>
                                         <p>The Mountain community of Monti Martani, Seranoand Subasio is using Geonode to share  spatial data such like hiking trails and other distrincitve outdoor feautures.
@@ -122,8 +122,28 @@
                             </div>
                         </div>
                          <div class="span5">
-                        <a href= "http://www.montagneaperte.it"><img src="static/img/montagneAperte.png" width="325" height="189" alt="Iphone Geonode" class="feature-img" /></a>
+                        <a href= "http://www.montagneaperte.it"><img src="static/img/montagneAperte.png" width="325" height="189" alt="montagneAperte" class="feature-img" /></a>
                     </div>
+                </div>
+            </div>
+        </section>
+<section class="feature-details feature3" id="worldwide">
+            <div class="container">
+                <div class="row">
+                    <div class="span5">
+                        <a href= "http://cariska.mona.uwi.edu"><img src="static/img/cariska.png" width="325" height="189" alt="cariska" class="feature-img" /></a>
+                    </div>
+                         <div class="span7 number five">
+                             <div class="highlighted-box">
+                                <h2>Caribbean Risk Atla</strong></h2>
+                                <h4>UMI DRRC</h4>
+                                    <div>
+                                        <p>The University of the West Indies (UWI) Disaster Risk Reduction Centre (DRRC) and the World Bank collaborated on the "Caribbean Risk Atlas" project with the main goal of making spatial data on risk for hurricanes, earthquakes and floods in the Caribbean available on-line. Mona GeoInformatics Institute (MGI) built the "Cariska" web map application for this project on the GeoNode platform.
+                                        Find it online: <a href= "http://cariska.mona.uwi.edu">WFP</a>
+                                        </p>
+                                    </div>
+                            </div>
+                        </div>
                 </div>
             </div>
         </section>
