--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -256,7 +256,7 @@
                 <div class="row">
                          <div class="span7 number ten">
                              <div class="highlighted-box">
-                                <h2>HaitiData.org.org</strong></h2>
+                                <h2>HaitiData.org</strong></h2>
                                 <h4>The World Bank</h4>
                                     <div>
                                         <p>HaitiData is designed toto facilitate open access to Haiti-related 
@@ -266,13 +266,55 @@
                                             For a list of all the organizations and people involved in data 
                                             collection for the site, see the  <a href= "http://haitidata.org/partners/">partners page.</a>
                                            
-                                            Find it online: <a href= "http://haitidata.org">HaitiData.org.org</a>
+                                            Find it online: <a href= "http://haitidata.org">HaitiData.org</a>
                                         </p>
                                     </div>
                             </div>
                         </div>
                          <div class="span5">
                         <a href= "http://haitidata.org"><img src="static/img/haiti.png" width="325" height="222" alt="haitidata" class="feature-img" /></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="feature-details feature3" id="americas">
+            <div class="container">
+                <div class="row">
+                    <div class="span5">
+                        <a href= "http://geonode.gov.vc"><img src="static/img/vincent.png" width="325" height="178" alt="vincent" class="feature-img" /></a>
+                    </div>
+                         <div class="span7 number eleven">
+                             <div class="highlighted-box">
+                                <h2>St. Vincent Geonode</strong></h2>
+                                <h4></h4>
+                                    <div>
+                                        <p>Various ministries of the St. Vincent Government are using GeoNode to push of proprietary software. This software will eventually replace the proprietary ones that are currently use.
+
+                                        Find it online: <a href= "http://geonode.gov.vc">St. Vincent Geonode</a>
+                                        </p>
+                                    </div>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </section>
+        <section class="feature-details feature2" id="worldwide">
+            <div class="container">
+                <div class="row">
+                         <div class="span7 number twelve">
+                             <div class="highlighted-box">
+                                <h2>Golfgis.com</strong></h2>
+                                <h4></h4>
+                                    <div>
+                                        <p>Golfgis.com was developed to help golf courses manage sustainably, reduce waste, improve ecological diversity and help drive business. Golfgis uses GeoNode to help improve data exchange within the golf industry to provide accurate, up-to-date data that in the end support making better decisions.
+                                           
+                                        Find it online: <a href= "http://www.golfgis.com">Golfgis.com</a>
+                                        </p>
+                                    </div>
+                            </div>
+                        </div>
+                         <div class="span5">
+                        <a href= "http://www.golfgis.com"><img src="static/img/golf.png" width="325" height="225" alt="golf" class="feature-img" /></a>
                     </div>
                 </div>
             </div>
